Ajout de nouveaux fichiers

--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
             </ul>
         </section>
         
-
+        <div class="cbouton">
             <!-- Bouton pour afficher le message -->
             <button id="message">Afficher le message</button>
             <!-- Bouton pour masquer le message -->
             <button id="masquer">Masquer le message</button>
+        </div>
             <!-- Zone où le message sera affiché ou masqué -->
             <div id="boitemessage"></div>
     </div>
